# unnamed-shell

./: astal-mpris.patch  flake.nix  meson.build
src/: application.vala  bar.vala  control_panel.vala  gresource.xml  launcher.vala  launcher_application.vala  meson.build  mpris_player.vala  notification.vala  notification_popups.vala  osd_popups.vala
src/gtk/: bar.ui  control-panel.ui  launcher-application.ui  launcher.ui  mpris-player.ui  notification-popups.ui  notification.ui  osd-popups.ui  style.scss
